--- a/package.json
+++ b/package.json
@@ -10,14 +10,23 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo-google-fonts/roboto": "^0.2.3",
     "expo": "~52.0.37",
+    "expo-font": "~13.0.4",
     "expo-status-bar": "~2.0.1",
+    "phosphor-react-native": "^2.3.1",
     "react": "18.3.1",
-    "react-native": "0.76.7"
+    "react-dom": "18.3.1",
+    "react-native": "0.76.7",
+    "react-native-svg": "^15.11.2",
+    "styled-components": "^6.1.10"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
     "@types/react": "~18.3.12",
+    "@types/react-native": "^0.73.0",
+    "@types/styled-components": "^5.1.34",
+    "babel-plugin-module-resolver": "^5.0.2",
     "typescript": "^5.3.3"
   },
   "private": true
